fast/canvas/canvas-crash.html doesn't test what it intends to on iOS https://bugs.webkit.org/show_bug.cgi?id=228747

Reviewed by Simon Fraser.

Source/WebCore:

The test fast/canvas/canvas-crash.html intends to test changes made
to actual canvas code (see r215632); however, on the iOS simulator
the test doesn't even manage to make a canvas context because of
"maximum area" and "maximum backing store size" limits, which differ
per-platform. This results in unique test results for iOS, as well
as the test not actually exercising the code it was intended to.

Fix this by adding an override for the maximum area limit (we already
had one for maximum backing store size), and overriding them in
this test (and another similarly afflicted test).

* html/HTMLCanvasElement.cpp:
(WebCore::maxCanvasArea):
(WebCore::HTMLCanvasElement::setMaxCanvasAreaForTesting):
(WebCore::HTMLCanvasElement::createImageBuffer const):
* html/HTMLCanvasElement.h:
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):
(WebCore::Internals::setMaxCanvasArea):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/canvas/canvas-crash.html:
* fast/canvas/canvas-skia-excessive-size.html:
* platform/ios-simulator/fast/canvas/canvas-crash-expected.txt: Removed.
* platform/ios-simulator/fast/canvas/canvas-skia-excessive-size-expected.txt: Removed.
Delete the iOS-specific results, and adopt the new overrides in these two tests.


Canonical link: https://commits.webkit.org/240306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280715 268f45cc-cd09-0410-ab3c-d52691b4dbfc